RESOLVED FIXED43411
The ARM JIT does not support JSValue32_64 with RVCT
https://bugs.webkit.org/show_bug.cgi?id=43411
Summary The ARM JIT does not support JSValue32_64 with RVCT
Gabor Loki
Reported 2010-08-03 04:39:27 PDT
There are some missing functions and codes in the JSValue32_64 section for RVCT. I am going to implement those.
Attachments
JSValue32_64 is enabled for RVCT by default (6.33 KB, patch)
2010-08-05 08:01 PDT, Gabor Loki
barraclough: review+
loki: commit-queue-
Gabor Loki
Comment 1 2010-08-05 08:01:28 PDT
Created attachment 63593 [details] JSValue32_64 is enabled for RVCT by default RVCT 4.0 is happy with this patch. Here is the result of the comparison of JSValue32 and -32_64 on ARM with RVCT 4.0. SunSpider: JSValue32_64 is 1.835x as fast V8: JSValue32_64 is 1.06x as slow WindScorpion: JSValue32_64 is 1.01x as slow
WebKit Review Bot
Comment 2 2010-08-05 08:02:23 PDT
Attachment 63593 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 JavaScriptCore/jit/JITStubs.cpp:242: Extra space before ( in function call [whitespace/parens] [4] JavaScriptCore/jit/JITStubs.cpp:460: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gabor Loki
Comment 3 2010-08-05 22:51:13 PDT
Committed revision 64818.
Note You need to log in before you can comment on or make changes to this bug.