The ARM JIT does not support JSValue32_64 with RVCT https://bugs.webkit.org/show_bug.cgi?id=43411

Reviewed by Gavin Barraclough.

JSValue32_64 is enabled for RVCT by default.

* create_jit_stubs:
* jit/JITStubs.cpp:
(JSC::ctiTrampoline):
(JSC::ctiVMThrowTrampoline):
(JSC::ctiOpThrowNotCaught):
* wtf/Platform.h:



Canonical link: https://commits.webkit.org/55634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64818 268f45cc-cd09-0410-ab3c-d52691b4dbfc